--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3.1'
 
+environment:
+  ACCEPT_EULA: "Y"
 services:
 
   seq:
    image: datalust/seq
-   command: -e ACCEPT_EULA=Y
    container_name: seq
    ports:
     - "5341:80"
