--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.1'
 
-environment:
-  ACCEPT_EULA: "Y"
 services:
 
   seq:
    image: datalust/seq
    container_name: seq
+   environment:
+    - ACCEPT_EULA=Y
    ports:
     - "5341:80"
    volumes:
